feat: sonar warnings